<resources>
    <string name="app_name">qqpega</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="user_name">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signIn">Não tem uma conta? Clique aqui!</string>
    <string name="account_name">Account Name</string>
    <string name="remember_my_password">Remember my password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_your_login_info">Esqueceu sua senha?</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="register">Registrar</string>
    <string name="photo">Foto</string>

    <string name="api_key_google">AIzaSyDPaquKzwJGkIzX1Tiv22erDdh_3XCL-Z8</string>
    <string name="time_start">Hora de Abertura</string>
    <string name="time_end">Hora de Fechamento</string>
    <string name="comida_boteco">Comida de Buteco</string>
    <string name="bar">Bar</string>
    <string name="pub">Pub</string>
    <string name="address">Endereço</string>
    <string name="table">Mesas</string>
    <string name="type">Tipo de ambiente</string>
    <string name="logo">Logo</string>
    <string name="drink">Drink</string>
    <string name="longneck">Long Neck</string>
    <string name="botle">Garrafa 600</string>
    <string name="drinktype">Tipo de Bebidas</string>
    <string name="food">Tipo de Comida</string>
    <string name="espeto">Espetos</string>
    <string name="porcao">Porção</string>
    <string name="music">Música ao vivo</string>
    <string name="park">Estacionamento</string>
    <string name="value">Valor da Entrada</string>
    <string name="restaurant">Restaurante</string>
    <string name="selfservice">Self-Service</string>
    <string name="phone">Telefone</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="map">Mapa</string>
    <string name="place">Locais</string>
    <string name="event">Evento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_new_place">Cadastro de novo Local</string>
    <string name="street">Av/Rua</string>
    <string name="number">Nº</string>
    <string name="neighborhood">Bairro</string>
    <string name="bebidas">Bebidas</string>
    <string name="dose">Dose</string>
    <string name="litrao">Litrão</string>
    <string name="possui">Possui</string>
    <string name="shot">Shot</string>
    <string name="beer">Cerveja</string>
    <string name="cerveja_artesanal">Cerveja Artesanal</string>
    <string name="wyne">Vinhos</string>
    <string name="price">Valores</string>
    <string name="amstel">Amstel</string>
    <string name="cifrao">R$</string>
    <string name="latao">Latão</string>
    <string name="brahma">Brahma</string>
    <string name="chopp">Chopp</string>
    <string name="eisenbahn">Eisenbahn</string>
    <string name="heineken">Heineken</string>
    <string name="budwiser">Budwiser</string>
    <string name="bohemia">Bohemia</string>
    <string name="original">Original</string>
    <string name="estilos">Estilos</string>
    <string name="funk">Funk</string>
    <string name="sertanejo">Sertanejo</string>
    <string name="pagode">Pagode</string>
    <string name="forro">Forró</string>
    <string name="eletronica">Eletronica</string>
    <string name="rock">Rock</string>
    <string name="samba">Samba</string>
    <string name="pop">POP</string>
    <string name="rap">Rap</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="sem_musica">Não possui Musica</string>
    <string name="comidas">Comidas</string>
    <string name="a_la_carte">À la carte</string>
    <string name="proibido">Proibio entrar com</string>
    <string name="camiseta">Regata</string>
    <string name="bone">Boné</string>
    <string name="chinelo">Chinelo</string>
    <string name="bermuda">Bermuda</string>
    <string name="camisa_time">Camisa de Time</string>
    <string name="entrada">Entrada:</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="fechado">Fechado,</string>
    <string name="aberto">Aberto,</string>
    <string name="play_ground">Área para crianças</string>
    <string name="lata">Lata</string>
    <string name="litrinho">Litrinho</string>
    <string name="upload">Upload</string>
    <string name="profile">Perfil</string>
    <string name="celphone">Celular</string>
    <string name="promocoes">Promoções</string>
    <string name="sinuca">Sinuca</string>
    <string name="favorite_place">Locais Favoritos</string>
    <string name="favorite_event">Eventos Favoritos</string>
    <string name="atracao">Atração do Dia</string>

</resources>