<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.ds.qqpega.ui.maps.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_place"
        android:name="com.ds.qqpega.ui.places.PlacesFragment"
        android:label="@string/place"
        tools:layout="@layout/fragment_place_list" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.ds.qqpega.ui.slideshow.SlideshowFragment"
        android:label="@string/event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ds.qqpega.ui.profile.AccountFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>